[CAMEL-11807] Upgrade camel-kafka to junit5