@@ -45,9 +45,15 @@ import org.apache.kafka.clients.consumer.KafkaConsumer;
 import org.apache.kafka.clients.producer.RecordMetadata;
 import org.apache.kafka.common.header.Header;
 import org.apache.kafka.common.header.Headers;
-import org.junit.AfterClass;
-import org.junit.BeforeClass;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
+
+import static org.apache.camel.test.junit5.TestSupport.assertIsInstanceOf;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
 
@@ -109,13 +115,13 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
     @BindToRegistry("myHeaderSerializer")
     private MyKafkaHeadersSerializer serializer = new MyKafkaHeadersSerializer();
 
-    @BeforeClass
+    @BeforeAll
     public static void before() {
         stringsConsumerConn = createStringKafkaConsumer("DemoConsumer");
         bytesConsumerConn = createByteKafkaConsumer(GROUP_BYTES);
     }
 
-    @AfterClass
+    @AfterAll
     public static void after() {
         // clean all test topics
         final List<String> topics = new ArrayList<>();
@@ -162,16 +168,16 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
 
         boolean allMessagesReceived = messagesLatch.await(200, TimeUnit.MILLISECONDS);
 
-        assertTrue("Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount(), allMessagesReceived);
+        assertTrue(allMessagesReceived, "Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount());
 
         List<Exchange> exchangeList = mockEndpoint.getExchanges();
-        assertEquals("Fifteen Exchanges are expected", exchangeList.size(), 15);
+        assertEquals(exchangeList.size(), 15, "Fifteen Exchanges are expected");
         for (Exchange exchange : exchangeList) {
             @SuppressWarnings("unchecked")
             List<RecordMetadata> recordMetaData1 = (List<RecordMetadata>)(exchange.getIn().getHeader(KafkaConstants.KAFKA_RECORDMETA));
-            assertEquals("One RecordMetadata is expected.", recordMetaData1.size(), 1);
-            assertTrue("Offset is positive", recordMetaData1.get(0).offset() >= 0);
-            assertTrue("Topic Name start with 'test'", recordMetaData1.get(0).topic().startsWith("test"));
+            assertEquals(recordMetaData1.size(), 1, "One RecordMetadata is expected.");
+            assertTrue(recordMetaData1.get(0).offset() >= 0, "Offset is positive");
+            assertTrue(recordMetaData1.get(0).topic().startsWith("test"), "Topic Name start with 'test'");
         }
     }
 
@@ -190,16 +196,16 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
 
         boolean allMessagesReceived = messagesLatch.await(200, TimeUnit.MILLISECONDS);
 
-        assertTrue("Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount(), allMessagesReceived);
+        assertTrue(allMessagesReceived, "Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount());
 
         List<Exchange> exchangeList = mockEndpoint.getExchanges();
-        assertEquals("Fifteen Exchanges are expected", exchangeList.size(), 15);
+        assertEquals(exchangeList.size(), 15, "Fifteen Exchanges are expected");
         for (Exchange exchange : exchangeList) {
             @SuppressWarnings("unchecked")
             List<RecordMetadata> recordMetaData1 = (List<RecordMetadata>)(exchange.getIn().getHeader(KafkaConstants.KAFKA_RECORDMETA));
-            assertEquals("One RecordMetadata is expected.", recordMetaData1.size(), 1);
-            assertTrue("Offset is positive", recordMetaData1.get(0).offset() >= 0);
-            assertTrue("Topic Name start with 'test'", recordMetaData1.get(0).topic().startsWith("test"));
+            assertEquals(1, recordMetaData1.size(), "One RecordMetadata is expected.");
+            assertTrue(recordMetaData1.get(0).offset() >= 0, "Offset is positive");
+            assertTrue(recordMetaData1.get(0).topic().startsWith("test"), "Topic Name start with 'test'");
         }
     }
 
@@ -217,7 +223,7 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
 
         boolean allMessagesReceived = messagesLatch.await(200, TimeUnit.MILLISECONDS);
 
-        assertTrue("Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount(), allMessagesReceived);
+        assertTrue(allMessagesReceived, "Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount());
 
         assertEquals(messageInTopic + messageInOtherTopic, MockProducerInterceptor.recordsCaptured.size());
     }
@@ -245,24 +251,24 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
 
         boolean allMessagesReceived = messagesLatch.await(200, TimeUnit.MILLISECONDS);
 
-        assertTrue("Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount(), allMessagesReceived);
+        assertTrue(allMessagesReceived, "Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount());
         List<Exchange> exchangeList = mockEndpoint.getExchanges();
-        assertEquals("Two Exchanges are expected", exchangeList.size(), 2);
+        assertEquals(2, exchangeList.size(), "Two Exchanges are expected");
         Exchange e1 = exchangeList.get(0);
         @SuppressWarnings("unchecked")
         List<RecordMetadata> recordMetaData1 = (List<RecordMetadata>)(e1.getIn().getHeader(KafkaConstants.KAFKA_RECORDMETA));
-        assertEquals("Ten RecordMetadata is expected.", recordMetaData1.size(), 10);
+        assertEquals(10, recordMetaData1.size(), "Ten RecordMetadata is expected.");
         for (RecordMetadata recordMeta : recordMetaData1) {
-            assertTrue("Offset is positive", recordMeta.offset() >= 0);
-            assertTrue("Topic Name start with 'test'", recordMeta.topic().startsWith("test"));
+            assertTrue(recordMeta.offset() >= 0, "Offset is positive");
+            assertTrue(recordMeta.topic().startsWith("test"), "Topic Name start with 'test'");
         }
         Exchange e2 = exchangeList.get(1);
         @SuppressWarnings("unchecked")
         List<RecordMetadata> recordMetaData2 = (List<RecordMetadata>)(e2.getIn().getHeader(KafkaConstants.KAFKA_RECORDMETA));
-        assertEquals("Five RecordMetadata is expected.", recordMetaData2.size(), 5);
+        assertEquals(5, recordMetaData2.size(), "Five RecordMetadata is expected.");
         for (RecordMetadata recordMeta : recordMetaData2) {
-            assertTrue("Offset is positive", recordMeta.offset() >= 0);
-            assertTrue("Topic Name start with 'test'", recordMeta.topic().startsWith("test"));
+            assertTrue(recordMeta.offset() >= 0, "Offset is positive");
+            assertTrue(recordMeta.topic().startsWith("test"), "Topic Name start with 'test'");
         }
     }
 
@@ -286,16 +292,16 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
 
         boolean allMessagesReceived = messagesLatch.await(200, TimeUnit.MILLISECONDS);
 
-        assertTrue("Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount(), allMessagesReceived);
+        assertTrue(allMessagesReceived, "Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount());
 
         List<Exchange> exchangeList = mockEndpoint.getExchanges();
-        assertEquals("Fifteen Exchanges are expected", exchangeList.size(), 15);
+        assertEquals(exchangeList.size(), 15, "Fifteen Exchanges are expected");
         for (Exchange exchange : exchangeList) {
             @SuppressWarnings("unchecked")
             List<RecordMetadata> recordMetaData1 = (List<RecordMetadata>)(exchange.getIn().getHeader(KafkaConstants.KAFKA_RECORDMETA));
-            assertEquals("One RecordMetadata is expected.", recordMetaData1.size(), 1);
-            assertTrue("Offset is positive", recordMetaData1.get(0).offset() >= 0);
-            assertTrue("Topic Name start with 'test'", recordMetaData1.get(0).topic().startsWith("test"));
+            assertEquals(1, recordMetaData1.size(), "One RecordMetadata is expected.");
+            assertTrue(recordMetaData1.get(0).offset() >= 0, "Offset is positive");
+            assertTrue(recordMetaData1.get(0).topic().startsWith("test"), "Topic Name start with 'test'");
         }
     }
 
@@ -337,19 +343,19 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
         List<ConsumerRecord<String, String>> records = pollForRecords(createStringKafkaConsumer("propagatedHeaderConsumer"), TOPIC_PROPAGATED_HEADERS, messagesLatch);
         boolean allMessagesReceived = messagesLatch.await(10_000, TimeUnit.MILLISECONDS);
 
-        assertTrue("Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount(), allMessagesReceived);
+        assertTrue(allMessagesReceived, "Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount());
 
         ConsumerRecord<String, String> record = records.get(0);
         Headers headers = record.headers();
-        assertNotNull("Kafka Headers should not be null.", headers);
+        assertNotNull(headers, "Kafka Headers should not be null.");
         // we have 6 headers
-        assertEquals("6 propagated header is expected.", 6, headers.toArray().length);
-        assertEquals("Propagated string value received", propagatedStringHeaderValue, new String(getHeaderValue(propagatedStringHeaderKey, headers)));
-        assertEquals("Propagated integer value received", propagatedIntegerHeaderValue, new Integer(ByteBuffer.wrap(getHeaderValue(propagatedIntegerHeaderKey, headers)).getInt()));
-        assertEquals("Propagated long value received", propagatedLongHeaderValue, new Long(ByteBuffer.wrap(getHeaderValue(propagatedLongHeaderKey, headers)).getLong()));
-        assertEquals("Propagated double value received", propagatedDoubleHeaderValue, new Double(ByteBuffer.wrap(getHeaderValue(propagatedDoubleHeaderKey, headers)).getDouble()));
-        assertArrayEquals("Propagated byte array value received", propagatedBytesHeaderValue, getHeaderValue(propagatedBytesHeaderKey, headers));
-        assertEquals("Propagated boolean value received", propagatedBooleanHeaderValue, Boolean.valueOf(new String(getHeaderValue(propagatedBooleanHeaderKey, headers))));
+        assertEquals(6, headers.toArray().length, "6 propagated header is expected.");
+        assertEquals(propagatedStringHeaderValue, new String(getHeaderValue(propagatedStringHeaderKey, headers)), "Propagated string value received");
+        assertEquals(propagatedIntegerHeaderValue, Integer.valueOf(ByteBuffer.wrap(getHeaderValue(propagatedIntegerHeaderKey, headers)).getInt()), "Propagated integer value received");
+        assertEquals(propagatedLongHeaderValue, Long.valueOf(ByteBuffer.wrap(getHeaderValue(propagatedLongHeaderKey, headers)).getLong()), "Propagated long value received");
+        assertEquals(propagatedDoubleHeaderValue, Double.valueOf(ByteBuffer.wrap(getHeaderValue(propagatedDoubleHeaderKey, headers)).getDouble()), "Propagated double value received");
+        assertArrayEquals(propagatedBytesHeaderValue, getHeaderValue(propagatedBytesHeaderKey, headers), "Propagated byte array value received");
+        assertEquals(propagatedBooleanHeaderValue, Boolean.valueOf(new String(getHeaderValue(propagatedBooleanHeaderKey, headers))), "Propagated boolean value received");
     }
 
     @Test
@@ -366,13 +372,13 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
         List<ConsumerRecord<String, String>> records = pollForRecords(createStringKafkaConsumer("noRecordSpecificHeadersConsumer"), TOPIC_NO_RECORD_SPECIFIC_HEADERS, messagesLatch);
         boolean allMessagesReceived = messagesLatch.await(10_000, TimeUnit.MILLISECONDS);
 
-        assertTrue("Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount(), allMessagesReceived);
+        assertTrue(allMessagesReceived, "Not all messages were published to the kafka topics. Not received: " + messagesLatch.getCount());
 
         ConsumerRecord<String, String> record = records.get(0);
         Headers headers = record.headers();
-        assertNotNull("Kafka Headers should not be null.", headers);
+        assertNotNull(headers, "Kafka Headers should not be null.");
         // we have 0 headers
-        assertEquals("0 propagated headers are expected", 0, headers.toArray().length);
+        assertEquals(0, headers.toArray().length, "0 propagated headers are expected");
     }
 
     @Test
@@ -389,7 +395,7 @@ public class KafkaProducerFullTest extends BaseEmbeddedKafkaTest {
 
     private byte[] getHeaderValue(String headerKey, Headers headers) {
         Header foundHeader = StreamSupport.stream(headers.spliterator(), false).filter(header -> header.key().equals(headerKey)).findFirst().orElse(null);
-        assertNotNull("Header should be sent", foundHeader);
+        assertNotNull(foundHeader, "Header should be sent");
         return foundHeader.value();
     }
 
